--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
 
         <activity
             android:name=".activity.GameActivity"
+            android:screenOrientation="portrait"
             android:label="">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
