--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,12 +6,10 @@ android {
     buildToolsVersion "25.0.2"
     defaultConfig {
         applicationId "info.overrideandroid.connect4"
-        minSdkVersion 19
+        minSdkVersion 18
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
-        vectorDrawables.useSupportLibrary = true
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -24,5 +22,7 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support.constraint:constraint-layout:1.0.0-beta3'
+
+    // Unit testing dependencies
+    testCompile 'junit:junit:4.12'
 }
