--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,6 +12,9 @@ android {
         versionName "1.1"
         testInstrumentationRunner 'android.support.test.runner.AndroidJUnitRunner'
     }
+     lintOptions {
+        abortOnError false
+    }
     buildTypes {
         release {
             minifyEnabled false
